--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "nodemon": "2.0.4"
   },
   "scripts": {
+    "client": "cd client && npm start",
     "server": "nodemon index.js",
     "start": "node index.js",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "nodemonConfig": {
